[gd_scene load_steps=6 format=2]

[ext_resource path="res://Test/Images/background.png" type="Texture" id=1]
[ext_resource path="res://Test/Images/sam_npc_sticker_transparent.png" type="Texture" id=2]
[ext_resource path="res://Test/Test.gd" type="Script" id=4]
[ext_resource path="res://Test/Animations/fade_bg.tres" type="Animation" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.5823, 215.112 )

[node name="Test" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -59.1392 ]
}

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512.78, 298.769 )
texture = ExtResource( 1 )

[node name="Sam" type="Sprite" parent="."]
position = Vector2( 208.499, 389.332 )
scale = Vector2( 0.733618, 0.736789 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 205.216, 387.909 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_bg = ExtResource( 5 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
